Archive2/eb/33384e5d842350/output
main.cpp: In function 'int main()':
main.cpp:10:42: error: invalid static_cast from type 'int (*)()' to type 'void*'
     void *ps = static_cast<void*>( pFunc );
                                          ^
main.cpp:12:47: warning: ISO C++ forbids casting between pointer-to-function and pointer-to-object [enabled by default]
     void *pr = reinterpret_cast<void*>( pFunc );
                                               ^
