Archive2/eb/33384e5d842350/main.cpp
int foo()
{
   return 123; 
}

int main()
{
    auto pFunc = &foo;
    
    void *ps = static_cast<void*>( pFunc );
    
    void *pr = reinterpret_cast<void*>( pFunc );
    
    (void)ps;
    (void)pr;
}
